<resources>
    <string name="app_name">My Gym Notes</string>
    <string name="fragment_workouts">Workouts</string>
    <string name="fragment_exercise">Exercise</string>
    <string name="fragment_summary">Workout Summary</string>
    <string name="fragment_edit_workout">Edit Workout</string>
    <string name="fragment_add_exercise">Add Exercise</string>

    <string name="workouts_list">Choose a workout</string>
    <string name="edit_workout">Edit workout</string>
    <string name="add_exercise">Add exercise</string>
    <string name="start_workout">Start workout</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="save_exercise">Save exercise</string>
    <string name="creatorEmail">simas.stasys@gmail.com</string>
    <string name="creatorName">Simas Stasys</string>
    <string name="aboutApp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="about">About</string>
    <string name="email_us">Email Us</string>
    <string name="github">GitHub</string>
    <string name="date">2020–10–10</string>
    <string name="workoutName">Workout name</string>
    <string name="weight_intensity">Weight/Intensity</string>
    <string name="sets">Sets:</string>
    <string name="repetition">Repetition:</string>
    <string name="exercise_example">Push Ups</string>
</resources>