<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.mygymnotes.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_workoutsFragment"
            app:destination="@id/workoutsFragment" />
        <action
            android:id="@+id/action_titleFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/workoutsFragment"
        android:name="com.example.mygymnotes.WorkoutsFragment"
        android:label="@string/fragment_workouts"
        tools:layout="@layout/fragment_workouts">
        <action
            android:id="@+id/action_workoutsFragment_to_workoutFragment"
            app:destination="@id/workoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/exerciseFragment"
        android:name="com.example.mygymnotes.ExerciseFragment"
        android:label="@string/fragment_exercise"
        tools:layout="@layout/fragment_exercise">
        <action
            android:id="@+id/action_exerciseFragment_to_summaryFragment"
            app:destination="@id/summaryFragment"
            app:popUpTo="@id/workoutsFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.mygymnotes.SummaryFragment"
        android:label="@string/fragment_summary"
        tools:layout="@layout/fragment_summary">
        <action
            android:id="@+id/action_summaryFragment_to_titleFragment"
            app:destination="@id/titleFragment"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editWorkoutFragment"
        android:name="com.example.mygymnotes.EditWorkoutFragment"
        android:label="@string/fragment_edit_workout"
        tools:layout="@layout/fragment_edit_workout">
        <action
            android:id="@+id/action_editWorkoutFragment_to_addExerciseFragment"
            app:destination="@id/addExerciseFragment"
            app:popUpTo="@id/editWorkoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/addExerciseFragment"
        android:name="com.example.mygymnotes.AddExerciseFragment"
        android:label="@string/fragment_add_exercise"
        tools:layout="@layout/fragment_add_exercise">
        <action
            android:id="@+id/action_addExerciseFragment_to_editWorkoutFragment"
            app:destination="@id/editWorkoutFragment"
            app:popUpTo="@id/workoutsFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.mygymnotes.AboutFragment"
        android:label="@string/about" />
    <fragment
        android:id="@+id/workoutFragment"
        android:name="com.example.mygymnotes.WorkoutFragment"
        android:label="fragment_workout"
        tools:layout="@layout/fragment_workout" >
        <action
            android:id="@+id/action_workoutFragment_to_editWorkoutFragment"
            app:destination="@id/editWorkoutFragment" />
        <action
            android:id="@+id/action_workoutFragment_to_exerciseFragment"
            app:destination="@id/exerciseFragment" />
    </fragment>
</navigation>