<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        tools:context=".ExerciseFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_weight="1"
                android:elevation="8dp"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/exerciseNameText"
                        style="@style/headlineRoboto5Text"
                        android:text="@string/exercise_example"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/exerciseImage"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/image_header_height"
                        android:layout_margin="@dimen/vertical_margin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/exerciseNameText"
                        app:srcCompat="@drawable/logo"
                        app:tint="@color/primaryColor" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="16dp"
                        android:layout_marginTop="20dp"
                        android:alpha="0.38"
                        android:background="@color/primaryColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/exerciseImage" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line"
                        android:baselineAligned="false">


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5">

                            <TextView
                                android:id="@+id/setsTextView"
                                style="@style/headline6Text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:alpha="0.7"
                                android:text="@string/sets"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/setsText"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintHorizontal_chainStyle="spread"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <EditText
                                android:id="@+id/setsText"
                                style="@style/numberEditTextDark"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="16dp"
                                android:alpha="0.7"
                                android:textColor="@color/primaryColor"
                                app:layout_constraintBottom_toBottomOf="@+id/setsTextView"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toEndOf="@+id/setsTextView"
                                app:layout_constraintTop_toTopOf="@+id/setsTextView"
                                tools:text="4"
                                android:importantForAutofill="no" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5">

                            <TextView
                                android:id="@+id/repetitionTextView"
                                style="@style/headline6Text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/repetition"
                                android:alpha="0.7"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/repetitionEditText"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintHorizontal_chainStyle="spread"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <EditText
                                android:id="@+id/repetitionEditText"
                                style="@style/numberEditTextDark"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="16dp"
                                android:alpha="0.7"
                                android:textColor="@color/primaryColor"
                                app:layout_constraintBottom_toBottomOf="@+id/repetitionTextView"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toEndOf="@+id/repetitionTextView"
                                app:layout_constraintTop_toTopOf="@+id/repetitionTextView"
                                app:layout_constraintVertical_bias="0.5"
                                tools:text="12"
                                android:importantForAutofill="no" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <EditText
            android:id="@+id/editWeight"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/nextExerciseBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0"
            tools:text="10"
            style="@style/numberEditText"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/nextExerciseBtn"
            style="@style/transparent_btn"
            android:layout_marginBottom="32dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            style="@style/headline6Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:alpha="0.87"
            android:text="@string/weight_intensity"
            android:textColor="@color/secondaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/editWeight"
            app:layout_constraintEnd_toStartOf="@+id/editWeight"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editWeight" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>